[workspace]
members = [
    "xtask",
    "examples/hello-plugin",
    "plugins/filesystem-plugin",
    "plugins/git-plugin",
    "plugins/code-review-plugin",
    "plugins/ralph-plugin",
    "plugins/github-review-publisher-plugin",
    "plugins/document-plugin",
    "plugins/ocr-plugin",
    "plugins/question-plugin",
    "plugins/bedrock-provider-plugin",
    "plugins/blims-plugin",
    "plugins/default-agents-plugin",
    "plugins/fake-provider-plugin",
    "plugins/openai-compatible-provider-plugin",
    "plugins/opencode-session-import-plugin",
    "plugins/pi-session-import-plugin",
    "plugins/shell-plugin",
    "plugins/web-search-plugin",
    "plugins/model-plugin",
    "plugins/skills-plugin",
    "plugins/worktree-plugin",
    "packages/agent-policy",
    "packages/agent-policy/models",
    "packages/code-review/models",
    "packages/agent-profile",
    "packages/bcode",
    "packages/cli",
    "packages/client",
    "packages/command",
    "packages/config",
    "packages/docs-site",
    "packages/docs-site/ui",
    "packages/daemon-lifecycle",
    "packages/ipc",
    "packages/model",
    "packages/model-provider-runtime",
    "packages/model-discovery",
    "packages/model-catalog",
    "packages/model-catalog/models",
    "packages/models-site",
    "packages/models-site/ui",
    "packages/markdown-render",
    "packages/metrics",
    "packages/syntax-render",
    "packages/plugin",
    "packages/plugin-sdk",
    "packages/provider-auth",
    "packages/ralph",
    "packages/server",
    "packages/settings",
    "packages/session",
    "packages/session-import",
    "packages/skill",
    "packages/skill/models",
    "packages/tool",
    "packages/tool-runtime",
    "packages/tui",
    "packages/worktree",
    "packages/worktree/models",
    "plugins/worktree-plugin",
    "packages/session/models",
]
resolver = "2"

[workspace.package]
authors    = ["Braden Steffaniak"]
edition    = "2024"
license    = "MPL-2.0"
readme     = "README.md"
repository = "https://github.com/BSteffaniak/bcode"
version    = "0.0.1-alpha.0"

[workspace.dependencies]
# Internal bcode packages
bcode_agent_policy                      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/agent-policy" }
bcode_agent_policy_models               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/agent-policy/models" }
bcode_agent_profile                     = { version = "0.0.1-alpha.0", default-features = false, path = "packages/agent-profile" }
bcode_bedrock_provider_plugin           = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/bedrock-provider-plugin" }
bcode_blims_plugin                      = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/blims-plugin" }
bcode_cli                               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli" }
bcode_client                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/client" }
bcode_code_review_models                = { version = "0.0.1-alpha.0", default-features = false, path = "packages/code-review/models" }
bcode_code_review_plugin                = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/code-review-plugin" }
bcode_command                           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/command" }
bcode_config                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config" }
bcode_daemon_lifecycle                  = { version = "0.0.1-alpha.0", default-features = false, path = "packages/daemon-lifecycle" }
bcode_default_agents_plugin             = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/default-agents-plugin" }
bcode_docs_site_ui                      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/docs-site/ui" }
bcode_document_plugin                   = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/document-plugin" }
bcode_fake_provider_plugin              = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/fake-provider-plugin" }
bcode_filesystem_plugin                 = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/filesystem-plugin" }
bcode_git_plugin                        = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/git-plugin" }
bcode_github_review_publisher_plugin    = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/github-review-publisher-plugin" }
bcode_ipc                               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/ipc" }
bcode_markdown_render                   = { version = "0.0.1-alpha.0", default-features = false, path = "packages/markdown-render" }
bcode_metrics                           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/metrics" }
bcode_model                             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/model" }
bcode_model_catalog                     = { version = "0.0.1-alpha.0", default-features = false, path = "packages/model-catalog" }
bcode_model_catalog_models              = { version = "0.0.1-alpha.0", default-features = false, path = "packages/model-catalog/models" }
bcode_model_discovery                   = { version = "0.0.1-alpha.0", default-features = false, path = "packages/model-discovery" }
bcode_model_plugin                      = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/model-plugin" }
bcode_model_provider_runtime            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/model-provider-runtime" }
bcode_models_site                       = { version = "0.0.1-alpha.0", default-features = false, path = "packages/models-site" }
bcode_models_site_ui                    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/models-site/ui" }
bcode_ocr_plugin                        = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/ocr-plugin" }
bcode_openai_compatible_provider_plugin = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/openai-compatible-provider-plugin" }
bcode_opencode_session_import_plugin    = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/opencode-session-import-plugin" }
bcode_pi_session_import_plugin          = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/pi-session-import-plugin" }
bcode_plugin                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin" }
bcode_plugin_sdk                        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin-sdk" }
bcode_provider_auth                     = { version = "0.0.1-alpha.0", default-features = false, path = "packages/provider-auth" }
bcode_question_plugin                   = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/question-plugin" }
bcode_ralph                             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/ralph" }
bcode_ralph_plugin                      = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/ralph-plugin" }
bcode_server                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/server" }
bcode_session                           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session" }
bcode_session_import                    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session-import" }
bcode_session_models                    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session/models" }
bcode_settings                          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/settings" }
bcode_shell_plugin                      = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/shell-plugin" }
bcode_skill                             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/skill" }
bcode_skill_models                      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/skill/models" }
bcode_skills_plugin                     = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/skills-plugin" }
bcode_syntax_render                     = { version = "0.0.1-alpha.0", default-features = false, path = "packages/syntax-render" }
bcode_tool                              = { version = "0.0.1-alpha.0", default-features = false, path = "packages/tool" }
bcode_tool_runtime                      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/tool-runtime" }
bcode_tui                               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/tui" }
bcode_web_search_plugin                 = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/web-search-plugin" }
bcode_worktree                          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/worktree" }
bcode_worktree_models                   = { version = "0.0.1-alpha.0", default-features = false, path = "packages/worktree/models" }
bcode_worktree_plugin                   = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/worktree-plugin" }

# BMUX reuse
bmux_codec = { default-features = false, features = [
    "serde",
    "positional",
    "typed-stable",
], git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_ipc = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_keyboard = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_plugin = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_plugin_schema = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_plugin_sdk = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_terminal_grid = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_text_edit = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_tui = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_tui_component_protocol = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_tui_components = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }

# External dependencies
arboard = { version = "3.6.1", default-features = false, features = [
    "image-data",
] }
aws-config = { version = "1.8.16", default-features = false, features = [
    "credentials-process",
    "rt-tokio",
    "rustls",
    "sso",
] }
aws-credential-types = { version = "1.2.14", default-features = false }
aws-sdk-bedrock = { version = "1.141.0", default-features = false, features = [
    "rt-tokio",
    "rustls",
] }
aws-sdk-bedrockruntime = { version = "1.130.0", default-features = false, features = [
    "rt-tokio",
    "rustls",
] }
aws-smithy-types = { version = "1.4.7", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
clap = { version = "4.5.40", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
git2 = { version = "0.20.3", default-features = false }
globset = { version = "0.4.18", default-features = false }
httpdate = { version = "1.0.3", default-features = false }
hyperchad = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_color = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_docs_config = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_docs_config_derive = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_docs_site = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_markdown = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false, features = [
    "xss-protection",
] }
hyperchad_renderer = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_template = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_transformer = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
hyperchad_transformer_models = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
image = { version = "0.25.10", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
    "webp",
] }
libloading = { version = "0.9.0", default-features = false }
pdf-extract = { version = "0.10.0", default-features = false }
png = { version = "0.18.1", default-features = false }
portable-pty = { version = "0.9.0", default-features = false }
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
rand = { version = "0.9.4", default-features = false, features = [
    "os_rng",
    "std",
] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rpassword = { version = "7.4.0", default-features = false }
rusqlite = { version = "=0.32.1", default-features = false, features = [
    "bundled",
] }
semver = { version = "1.0.28", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["std"] }
serde_json = { version = "1.0.149", default-features = false, features = [
    "std",
] }
sha2 = { version = "0.10.9", default-features = false }
ssh-key = { version = "0.6.7", default-features = false, features = [
    "ed25519",
    "getrandom",
    "std",
] }
sshenv_vault = { git = "https://github.com/BSteffaniak/sshenv.git", branch = "master", default-features = false, features = [
    "device-seal",
    "linux-secret-service",
    "macos-keychain",
    "profile-keys",
    "windows-dpapi",
] }
switchy = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false }
switchy_database = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false, features = [
    "schema",
    "sqlite-rusqlite",
] }
switchy_database_connection = { git = "https://github.com/MoosicBox/MoosicBox.git", branch = "master", default-features = false, features = [
    "sqlite-rusqlite",
] }
syntect = { version = "5.3.0", default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "parsing",
    "regex-onig",
] }
tempfile = { version = "3.27.0", default-features = false }
tesseract-rs = { version = "0.2.0", default-features = false }
test-log = { version = "0.2.20", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.1", default-features = false }
toml = { version = "1.1.2", default-features = false, features = [
    "parse",
    "serde",
    "std",
] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "std",
] }
unicode-segmentation = { version = "1.13.0", default-features = false }
unicode-width = { version = "0.2.2", default-features = false }
uuid = { version = "1.21.0", default-features = false }
worktree_setup_config = { version = "0.4.0", default-features = false }
worktree_setup_git = { version = "0.4.0", default-features = false }
worktree_setup_operations = { version = "0.4.0", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["std"] }

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

# HyperChad local development patches
# [patch."https://github.com/MoosicBox/MoosicBox.git"]
# hyperchad                         = { path = "../MoosicBox/packages/hyperchad" }
# hyperchad_actions                 = { path = "../MoosicBox/packages/hyperchad/actions" }
# hyperchad_app                     = { path = "../MoosicBox/packages/hyperchad/app" }
# hyperchad_color                   = { path = "../MoosicBox/packages/hyperchad/color" }
# hyperchad_docs_config             = { path = "../MoosicBox/packages/hyperchad/docs/config" }
# hyperchad_docs_config_derive      = { path = "../MoosicBox/packages/hyperchad/docs/config/derive" }
# hyperchad_docs_site               = { path = "../MoosicBox/packages/hyperchad/docs/site" }
# hyperchad_markdown                = { path = "../MoosicBox/packages/hyperchad/markdown" }
# hyperchad_renderer                = { path = "../MoosicBox/packages/hyperchad/renderer" }
# hyperchad_renderer_html           = { path = "../MoosicBox/packages/hyperchad/renderer/html" }
# hyperchad_renderer_vanilla_js     = { path = "../MoosicBox/packages/hyperchad/renderer/vanilla_js" }
# hyperchad_router                  = { path = "../MoosicBox/packages/hyperchad/router" }
# hyperchad_template                = { path = "../MoosicBox/packages/hyperchad/template" }
# hyperchad_template_actions_dsl    = { path = "../MoosicBox/packages/hyperchad/template/actions_dsl" }
# hyperchad_template_macros         = { path = "../MoosicBox/packages/hyperchad/template/macros" }
# hyperchad_transformer             = { path = "../MoosicBox/packages/hyperchad/transformer" }
# hyperchad_transformer_models      = { path = "../MoosicBox/packages/hyperchad/transformer/models" }
# switchy                          = { path = "../MoosicBox/packages/switchy" }
# switchy_async                    = { path = "../MoosicBox/packages/switchy/async" }

# [patch.crates-io]
# hyperchad_color              = { path = "../MoosicBox/packages/hyperchad/color" }
# hyperchad_markdown           = { path = "../MoosicBox/packages/hyperchad/markdown" }
# hyperchad_transformer        = { path = "../MoosicBox/packages/hyperchad/transformer" }
# hyperchad_transformer_models = { path = "../MoosicBox/packages/hyperchad/transformer/models" }
# moosicbox_assert             = { path = "../MoosicBox/packages/assert" }
# moosicbox_logging            = { path = "../MoosicBox/packages/logging" }
# switchy                     = { path = "/Volumes/tinyguy/GitHub/MoosicBox/packages/switchy" }
# switchy_env                  = { path = "../MoosicBox/packages/switchy/env" }
# switchy_time                 = { path = "../MoosicBox/packages/switchy/time" }

# BMUX local development patches
[patch."https://github.com/BSteffaniak/bmux.git"]
bmux_codec                  = { path = "/Volumes/ehdd/GitHub/bmux/packages/codec" }
bmux_ipc                    = { path = "/Volumes/ehdd/GitHub/bmux/packages/ipc" }
bmux_keyboard               = { path = "/Volumes/ehdd/GitHub/bmux/packages/keyboard" }
bmux_plugin                 = { path = "/Volumes/ehdd/GitHub/bmux/packages/plugin" }
bmux_plugin_schema          = { path = "/Volumes/ehdd/GitHub/bmux/packages/plugin-schema" }
bmux_plugin_sdk             = { path = "/Volumes/ehdd/GitHub/bmux/packages/plugin-sdk" }
bmux_terminal_grid          = { path = "/Volumes/ehdd/GitHub/bmux/packages/terminal-grid" }
bmux_text_edit              = { path = "/Volumes/ehdd/GitHub/bmux/packages/text-edit" }
bmux_tui                    = { path = "/Volumes/ehdd/GitHub/bmux/packages/tui" }
bmux_tui_component_protocol = { path = "/Volumes/ehdd/GitHub/bmux/packages/tui-component-protocol" }
bmux_tui_components         = { path = "/Volumes/ehdd/GitHub/bmux/packages/tui-components" }
