[package]
authors     = { workspace = true }
description = "Release automation for Bcode"
edition     = { workspace = true }
license     = { workspace = true }
name        = "xtask"
publish     = false
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
reqwest   = { workspace = true, features = ["blocking"] }
sha2      = { workspace = true, features = ["std"] }
toml_edit = { workspace = true, features = ["display", "parse"] }

[features]
default = []
fail-on-warnings = []
