[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Bundled Blims AI company simulator plugin for bcode"
edition     = { workspace = true }
keywords    = ["agent", "bcode", "blims", "company", "plugin"]
license     = { workspace = true }
name        = "bcode_blims_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_plugin_sdk            = { workspace = true }
bmux_codec                  = { workspace = true }
serde                       = { workspace = true, features = ["derive", "std"] }
serde_json                  = { workspace = true }
switchy_database            = { workspace = true }
switchy_database_connection = { workspace = true }
thiserror                   = { workspace = true }
tokio                       = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
