[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Blims AI company simulator plugin for bcode"
edition     = { workspace = true }
keywords    = ["agent", "bcode", "blims", "company", "plugin"]
license     = { workspace = true }
name        = "bcode_blims_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_client                = { workspace = true }
bcode_daemon_lifecycle      = { workspace = true }
bcode_ipc                   = { workspace = true }
bcode_plugin_sdk            = { workspace = true }
bcode_session_models        = { workspace = true }
bcode_worktree_models       = { workspace = true }
bmux_codec                  = { workspace = true }
bmux_keyboard               = { workspace = true }
bmux_tui                    = { workspace = true, features = ["crossterm"] }
clap                        = { workspace = true, features = ["derive", "std"] }
crossterm                   = { workspace = true }
serde                       = { workspace = true, features = ["derive", "std"] }
serde_json                  = { workspace = true }
switchy_database            = { workspace = true }
switchy_database_connection = { workspace = true }
thiserror                   = { workspace = true }
tokio                       = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
