[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Bundled local code review plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "code-review", "git", "plugin"]
license     = { workspace = true }
name        = "bcode_code_review_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_plugin_sdk = { workspace = true }
serde            = { workspace = true, features = ["derive", "std"] }
serde_json       = { workspace = true }
thiserror        = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
