[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Bundled local code review plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "code-review", "git", "plugin"]
license     = { workspace = true }
name        = "bcode_code_review_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_code_review_models = { workspace = true }
bcode_config = { workspace = true }
bcode_plugin_sdk = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
switchy = { workspace = true, features = [
    "database",
    "database-schema",
    "database-connection",
    "database-connection-turso",
    "schema",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
