[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Default agent profile policy plugin for bcode"
edition     = { workspace = true }
keywords    = ["agent", "bcode", "plugin", "policy"]
license     = { workspace = true }
name        = "bcode_default_agents_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_agent_policy   = { workspace = true }
bcode_agent_profile  = { workspace = true }
bcode_config         = { workspace = true }
bcode_plugin_sdk     = { workspace = true }
bcode_session_models = { workspace = true }
bcode_tool           = { workspace = true }
serde                = { workspace = true, features = ["derive", "std"] }
serde_json           = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
