[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "document extraction tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "document", "pdf", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_document_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_model_provider_runtime = { workspace = true }
bcode_plugin_sdk             = { workspace = true }
bcode_tool                   = { workspace = true }
bcode_tui_components         = { workspace = true, optional = true }
bmux_tui                     = { workspace = true, optional = true }
pdf-extract                  = { workspace = true }
reqwest                      = { workspace = true }
serde                        = { workspace = true, features = ["derive", "std"] }
serde_json                   = { workspace = true }
thiserror                    = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = ["bcode_tui_components", "bmux_tui"]
