[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "eval run viewer plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "eval", "tui", "plugin"]
license     = { workspace = true }
name        = "bcode_eval_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_command       = { workspace = true }
bcode_eval          = { workspace = true }
bcode_eval_models   = { workspace = true }
bcode_plugin_sdk    = { workspace = true }
bmux_keyboard       = { workspace = true }
bmux_tui            = { workspace = true }
bmux_tui_components = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
toml                = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
