[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Fake model provider plugin for bcode tests and smoke flows"
edition     = { workspace = true }
keywords    = ["bcode", "model", "provider", "plugin"]
license     = { workspace = true }
name        = "bcode_fake_provider_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_model      = { workspace = true }
bcode_plugin_sdk = { workspace = true }
serde            = { workspace = true, features = ["derive", "std"] }
serde_json       = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
