[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Bundled filesystem service plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "filesystem", "plugin"]
license     = { workspace = true }
name        = "bcode_filesystem_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64           = { workspace = true }
bcode_plugin_sdk = { workspace = true }
bcode_tool       = { workspace = true }
image            = { workspace = true }
serde            = { workspace = true, features = ["derive", "std"] }
serde_json       = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
