[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "filesystem service plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "filesystem", "plugin"]
license     = { workspace = true }
name        = "bcode_filesystem_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64               = { workspace = true }
bcode_plugin_sdk     = { workspace = true }
bcode_syntax_render  = { workspace = true, optional = true }
bcode_tool           = { workspace = true }
bmux_tui             = { workspace = true, optional = true }
image                = { workspace = true }
png                  = { workspace = true }
serde                = { workspace = true, features = ["derive", "std"] }
serde_json           = { workspace = true }
unicode-segmentation = { workspace = true, optional = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = ["bcode_syntax_render", "bmux_tui", "unicode-segmentation"]
