[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "filesystem service plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "filesystem", "plugin"]
license     = { workspace = true }
name        = "bcode_filesystem_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
bcode_plugin_sdk = { workspace = true, features = ["tui"] }
bcode_tool = { workspace = true }
bcode_tui_components = { workspace = true, features = [
    "syntax",
], optional = true }
bmux_tui = { workspace = true, optional = true }
devicons = { workspace = true, optional = true }
image = { workspace = true }
png = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = ["bcode_tui_components", "bmux_tui", "devicons"]
