[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Git repository access tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "git", "repository", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_git_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_plugin_sdk     = { workspace = true, features = ["tui"] }
bcode_tool           = { workspace = true }
bcode_tui_components = { workspace = true, optional = true }
bmux_tui             = { workspace = true, optional = true }
serde                = { workspace = true, features = ["derive", "std"] }
serde_json           = { workspace = true }
thiserror            = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = ["bcode_tui_components", "bmux_tui"]
