[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "model command palette plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "model", "runtime", "command", "plugin"]
license     = { workspace = true }
name        = "bcode_model_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_client         = { workspace = true }
bcode_command        = { workspace = true }
bcode_config         = { workspace = true }
bcode_ipc            = { workspace = true }
bcode_model          = { workspace = true }
bcode_plugin         = { workspace = true }
bcode_plugin_sdk     = { workspace = true }
bcode_session_models = { workspace = true }
bmux_keyboard        = { workspace = true }
bmux_tui             = { workspace = true }
clap                 = { workspace = true, features = ["derive", "std"] }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }
tokio                = { workspace = true, features = ["rt"] }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
