[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "OCR tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "ocr", "tesseract", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_ocr_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_model_provider_runtime = { workspace = true }
bcode_plugin_sdk             = { workspace = true }
bcode_tool                   = { workspace = true }
image                        = { workspace = true, optional = true }
reqwest                      = { workspace = true }
serde                        = { workspace = true, features = ["derive", "std"] }
serde_json                   = { workspace = true }
tesseract-rs                 = { workspace = true, optional = true }
thiserror                    = { workspace = true }
tokio                        = { workspace = true, features = ["fs", "io-util", "process", "time"] }

[features]
bundled-tesseract = [
    "dep:image",
    "dep:tesseract-rs",
    "tesseract-rs/build-tesseract",
]
default = []
external-tesseract-cli = []
fail-on-warnings = []
static-bundled = []
